[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident_triage_env"
version = "0.1.0"
description = "Production Incident Triage Environment for OpenEnv — a real-world SRE task"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
inference = [
    "openai>=1.0.0",
    "websocket-client>=1.6.0",
]

[project.scripts]
server = "incident_triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["incident_triage_env", "incident_triage_env.server"]
package-dir = { "incident_triage_env" = ".", "incident_triage_env.server" = "server" }
